@@ -4,6 +4,7 @@
     xmlns:five="http://namespaces.zope.org/five"
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
     i18n_domain="collective.solr">
 
@@ -65,5 +66,19 @@
       provides="Products.GenericSetup.interfaces.IBody"
       for=".interfaces.ISolrConnectionConfig
            Products.GenericSetup.interfaces.ISetupEnviron" />
+
+  <genericsetup:exportStep
+      name="solr"
+      title="Solr configuration"
+      description="Export settings for Solr integration."
+      handler="collective.solr.exportimport.exportSolrSettings" />
+
+  <genericsetup:importStep
+      name="solr"
+      title="Solr configuration"
+      description="Import settings for Solr integration."
+      handler="collective.solr.exportimport.importSolrSettings">
+    <depends name="componentregistry"/>
+  </genericsetup:importStep>
 
 </configure>
