@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
- <import-step id="solr" version="20080603-01"
-           handler="collective.solr.exportimport.importSolrSettings"
-           title="solr configuration">
-  <dependency step="componentregistry"/>
-  Import settings for Solr integration.
- </import-step>
-</import-steps>
